# jsonai

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  engine.rs  main.rs  manipulate.rs  output.rs  query.rs
testdata/: config.json  users.json
tests/: test_pointer_escape.sh
