[package]
name = "jsonai"
version = "0.2.0"
edition = "2021"
description = "Agent-first JSON full-text search CLI"

[dependencies]
tantivy = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
